css/wechat-fix.css
table {
  display: table;
  width: 100%;
}

table tr:nth-child(2n) {
  background-color: #f8f8f8;
}

.task-list-list.checked {
  color: #159957;
}

.task-list-list.uncheck {
  color: #bfc1bf;
}

.task-list-list img {
  height: 20px;
  width: 20px;
  margin: 0 10px;
  top: 4px;
  position: relative;
  display: inline-block;
}


ruby {
  background-color: rgba(67, 193, 105, 0.5);
  margin: 4px;
  padding-right: 2px;
  padding-left: 2px;
}

ruby rt {
  font-style: italic;
  background-color: rgba(67, 193, 105, 0.2);
}

figcaption {
  text-align: center;
  font-size: 12px;
  padding: 8px;
  color: #ccc;
}

img {
  margin: 0 auto;
  display: block;
}


.prettyprint {
  background: #eef1f5;
  border-left: 0.3rem solid #1abc9c !important;
  font-family: Consolas, Menlo, Courier, monospace;
}

.prettyprint pre p {
  min-height: 10px;
}

.prettyprint li {
  background-color: #eef1f5;
  margin-bottom: 0;
}

.prettyprint code {
  white-space: pre-wrap !important;
}

p {
  margin-bottom: 15px;
  margin-top: 15px;
}


h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 3rem;
  margin-bottom: 3rem;
}

h1 {
  font-size: 32px;
}

h2 {
  font-size: 28px;
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 20px;
}

h5 {
  font-size: 16px;
}

pre.prettyprint {
  border: none;
  border-left: 0.3rem solid #1abc9c !important;
}

figure {
  margin: 0;
}

blockquote, dl, figure, form, ol, p, pre, table, ul {
  margin-bottom: 16px;
}

ol li,
ul li,
li p {
  color: #384452;
}

